test/stage1_params/param_call_undef.c
// @expected-error E1200 no_such_func at line 3
int main() {
    return no_such_func(1);
}